# modern-django-cheat-sheet

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
dj_config/: settings.py
notebooks/: 01_basic.ipynb  test.ipynb
notebooks/utils/: django_initializer.py
python_functions/: django_initializer.py  hello.ipynb
