[tool]

[tool.poetry]
name = "Modern Django Cheat Sheet"
version = "1.0.0"
description = "Modern Python Cheat Sheet"
authors = ["David Dahan <david.dahan3@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.5"
Django = "4.*" # https://github.com/django/django
django-environ = "*" # https://github.com/joke2k/django-environ
dj-database-url = "*" # https://github.com/jazzband/dj-database-url
psycopg = { extras = [
    "binary",
], version = "*" } # https://github.com/psycopg/psycopg
ipdb = "*" # https://github.com/gotcha/ipdb
ipykernel = "*" # https://github.com/ipython/ipykernel
django-extensions = "*" # https://github.com/django-extensions/django-extensions

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
